--- a/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/src/app/layouts/dashboard/pages/users/users.component.html
@@ -25,7 +25,7 @@
     <ng-container matColumnDef="fullName">
       <th mat-header-cell *matHeaderCellDef>Nombre y Apellido</th>
       <td mat-cell *matCellDef="let user">
-        {{ user.firstName + " " + user.lastName }}
+        {{user | fullName}}
       </td>
     </ng-container>
     <ng-container matColumnDef="email">
