se agrego directiva font-size

--- a/src/app/layouts/dashboard/pages/users/components/user-form/user-form.component.html
+++ b/src/app/layouts/dashboard/pages/users/components/user-form/user-form.component.html
@@ -1,5 +1,5 @@
 <div class="formContainer">
-  <h2>Formulario de Alta</h2>
+  <h2 appFontSizeDirective>Formulario de Alta</h2>
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <div class="containerInputs">
       <mat-form-field>
