--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <mat-drawer-container class="dashboardCointainer" autosize>
   <mat-drawer #drawer class="sidenavContainer" mode="side">
+    
+
     <ul>
       <li>
         <mat-icon
@@ -7,7 +9,7 @@
           aria-label="Example home icon"
           fontIcon="home"
         ></mat-icon
-        ><a routerLink="/dashboard" routerLinkActive="active">Inicio</a>
+        ><a routerLink="home" routerLinkActive="active">Inicio</a>
       </li>
       <li>
         <mat-icon
@@ -15,11 +17,36 @@
           aria-label="Example home icon"
           fontIcon="group_add"
         ></mat-icon
-        ><a routerLink="/dashboard/department" routerLinkActive="active"
-          >Estudiantes</a
+        ><a 
+        routerLink="users" routerLinkActive="active"
+          >Usuarios</a
+        >
+      </li>
+      <li>
+        <mat-icon
+          aria-hidden="false"
+          aria-label="Example home icon"
+          fontIcon="group_add"
+        ></mat-icon
+        ><a 
+        routerLink="users" routerLinkActive="active"
+          >Cursos</a
+        >
+      </li>
+      <li>
+        <mat-icon
+          aria-hidden="false"
+          aria-label="Example home icon"
+          fontIcon="group_add"
+        ></mat-icon
+        ><a (click)="logout()" routerLinkActive="active"
+          >Cerrar sesion</a
         >
       </li>
     </ul>
+
+
+    <!--  -->
   </mat-drawer>
   <div class="">
     <mat-toolbar color="primary" class="navbarContainer">
@@ -35,7 +62,7 @@
     </mat-toolbar>
   </div>
   <div class="tableContainer">
-    
-    <app-users></app-users>
+    <!-- <app-users></app-users> -->
+    <router-outlet></router-outlet>
   </div>
 </mat-drawer-container>
