--- a/src/app/layouts/dashboard/dashboard.component.scss
+++ b/src/app/layouts/dashboard/dashboard.component.scss
@@ -23,6 +23,7 @@
 }
 .sidenavContainer ul li a{
     color: white;
+    text-decoration: none;
 }
 .sidenavContainer ul li mat-icon {
     color: white;
@@ -38,3 +39,4 @@
     margin-left: 30px;
     margin-right: 30px;
 }
+
