se agrego estilos a cursos

--- a/src/app/layouts/dashboard/pages/courses/components/course-dialog/course-dialog.component.scss
+++ b/src/app/layouts/dashboard/pages/courses/components/course-dialog/course-dialog.component.scss
@@ -25,3 +25,10 @@ form{
     width: 100%;
     justify-content: center;
 }
+
+.buttonDialog button{
+    color: white;
+    background-color: #6930C3;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
