--- a/src/app/layouts/dashboard/pages/users/components/user-form/user-form.component.html
+++ b/src/app/layouts/dashboard/pages/users/components/user-form/user-form.component.html
@@ -54,7 +54,7 @@
           </span>
         </mat-error>
       </mat-form-field>
-      <mat-form-field>
+      <!-- <mat-form-field>
         <mat-label>Nivel</mat-label>
         <mat-select formControlName="nivel">
           <mat-option value="Inicial">Inicial</mat-option>
@@ -66,8 +66,8 @@
             El nivel es requerido
           </span>
         </mat-error>
-      </mat-form-field>
-      <mat-form-field>
+      </mat-form-field> -->
+      <!-- <mat-form-field>
         <mat-label>Curso</mat-label>
         <mat-select formControlName="curso">
           <mat-option value="Basico">Basico</mat-option>
@@ -81,7 +81,7 @@
             El curso es requerido
           </span>
         </mat-error>
-      </mat-form-field>
+      </mat-form-field> -->
     </div>
 
     <div class="buttonSubmit">
