--- a/src/app/layouts/dashboard/pages/courses/components/course-dialog/course-dialog.component.html
+++ b/src/app/layouts/dashboard/pages/courses/components/course-dialog/course-dialog.component.html
@@ -85,8 +85,8 @@
       </mat-form-field>
     </form>
   </div>
-  <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button cdkFocusInitial (click)="onSave()">Guardar</button>
+  <div class="buttonDialog" mat-dialog-actions>
+    <button mat-flat-button mat-dialog-close>Cancelar</button>
+    <button mat-flat-button cdkFocusInitial (click)="onSave()">Guardar</button>
   </div>
 </div>
