--- a/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/src/app/layouts/dashboard/pages/users/users.component.html
@@ -11,70 +11,65 @@
     <app-user-form (userSubmitted)="onUserSubmitted($event)"></app-user-form>
   </mat-expansion-panel>
 </mat-accordion>
+<div><h1 appFontSizeDirective>Lista de Usuarios</h1></div>
+<div class="formUserContainer">
+  <div class="buttonContainer">
+    <button mat-flat-button>Agregar Usuario</button>
+  </div>
+  <div class="tableBody">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th class="acctionText" mat-header-cell *matHeaderCellDef>ID</th>
+        <td  class="acctionText"mat-cell *matCellDef="let user">{{ user.id }}</td>
+      </ng-container>
+      <ng-container matColumnDef="fullName">
+        <th class="acctionText" mat-header-cell *matHeaderCellDef>Nombre y Apellido</th>
+        <td  class="acctionText"mat-cell *matCellDef="let user">
+          {{ user | fullName }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="email">
+        <th class="acctionText" mat-header-cell *matHeaderCellDef>Email</th>
+        <td class="acctionText" mat-cell *matCellDef="let user">{{ user.email }}</td>
+      </ng-container>
+      <ng-container matColumnDef="phone">
+        <th class="acctionText" mat-header-cell *matHeaderCellDef>Telefono</th>
+        <td class="acctionText" mat-cell *matCellDef="let user">{{ user.phone }}</td>
+      </ng-container>
+      <ng-container matColumnDef="role">
+        <th class="acctionText" mat-header-cell *matHeaderCellDef>Rol</th>
+        <td class="acctionText" mat-cell *matCellDef="let user">{{ user.role }}</td>
+      </ng-container>
+      <!-- <ng-container matColumnDef="nivel">
+        <th mat-header-cell *matHeaderCellDef>Nivel</th>
+        <td mat-cell *matCellDef="let user">{{ user.nivel }}</td>
+      </ng-container> -->
+      <!-- <ng-container matColumnDef="curso">
+        <th mat-header-cell *matHeaderCellDef>Curso</th>
+        <td mat-cell *matCellDef="let user">{{ user.curso }}</td>
+      </ng-container> -->
+      <ng-container matColumnDef="actions">
+        <th class="acctionText" mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td class="actionButton"  mat-cell *matCellDef="let user">
+          {{ user.actions }}
+          <button [routerLink]="user.id" mat-icon-button class="buttonEdit">
+            <mat-icon>visibility</mat-icon>
+          </button>
+          <button
+            class="buttonEdit"
+            mat-icon-button
+            (click)="onUpdatedUser(user.id)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="showModalDeleted(user)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-<div class="tableBody">
-  <div><h1 appFontSizeDirective>Lista de Estudiantes</h1></div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let user">{{ user.id }}</td>
-    </ng-container>
-    <ng-container matColumnDef="fullName">
-      <th mat-header-cell *matHeaderCellDef>Nombre y Apellido</th>
-      <td mat-cell *matCellDef="let user">
-        {{ user | fullName }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let user">{{ user.email }}</td>
-    </ng-container>
-    <ng-container matColumnDef="phone">
-      <th mat-header-cell *matHeaderCellDef>Telefono</th>
-      <td mat-cell *matCellDef="let user">{{ user.phone }}</td>
-    </ng-container>
-    <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef>Rol</th>
-      <td mat-cell *matCellDef="let user">{{ user.role }}</td>
-    </ng-container>
-    <ng-container matColumnDef="nivel">
-      <th mat-header-cell *matHeaderCellDef>Nivel</th>
-      <td mat-cell *matCellDef="let user">{{ user.nivel }}</td>
-    </ng-container>
-    <ng-container matColumnDef="curso">
-      <th mat-header-cell *matHeaderCellDef>Curso</th>
-      <td mat-cell *matCellDef="let user">{{ user.curso }}</td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let user">
-        {{ user.actions }}
-        <button
-       [routerLink]="user.id"
-         mat-icon-button class="buttonEdit" >
-          <mat-icon>visibility</mat-icon>
-        </button>
-        <button
-          class="buttonEdit"
-          mat-icon-button
-          (click)="onUpdatedUser(user.id)"
-        >
-          <mat-icon>edit</mat-icon></button
-
-        >
-        <button mat-icon-button color="warn" (click)="showModalDeleted(user)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- Name Column -->
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 </div>
