--- a/src/app/layouts/dashboard/pages/users/users.component.scss
+++ b/src/app/layouts/dashboard/pages/users/users.component.scss
@@ -1,12 +1,32 @@
+h1{
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 40px;
+}
+.formUserContainer{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 .tableBody{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    
     height: 500px;
-    width: 100%;
-    margin-bottom: 20px;   
-    margin-top: 40px;
+    width: 80%;
+    margin-bottom: 20px;  
+}
+.buttonContainer{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    
+}
+.buttonContainer button{
+    color: white;
+    background-color: #6930C3;
 }
 
 
@@ -40,4 +60,13 @@ flex-direction: column;
 .buttonEdit{
     color: #6930C3;
 }
+
+.acctionText{
+    text-align: center;
+}
+.actionButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
 
