se agrego abm usuarios editables

--- a/src/app/layouts/dashboard/pages/courses/components/course-dialog/course-dialog.component.html
+++ b/src/app/layouts/dashboard/pages/courses/components/course-dialog/course-dialog.component.html
@@ -87,6 +87,6 @@
   </div>
   <div class="buttonDialog" mat-dialog-actions>
     <button mat-flat-button mat-dialog-close>Cancelar</button>
-    <button mat-flat-button cdkFocusInitial (click)="onSave()">Guardar</button>
+    <button mat-flat-button  (click)="onSave()">Guardar</button>
   </div>
 </div>
