--- a/src/app/layouts/dashboard/pages/home/home.component.html
+++ b/src/app/layouts/dashboard/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<h1>Bienvenido</h1>
+<div  class="container">
+    <div class="homeContainer">
+        <h1>Bienvenidos al gestor de datos del instituto Forum</h1>
+        <p>En este sistema podras gestionar los datos de los usuarios,inscripciones, cursos y alumnos del instituto Forum</p>
+        <p>Para comenzar selecciona una de las opciones del menu lateral</p>
+    </div>
+</div>
+
